[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
console_error_panic_hook = "*"
console_log = "1.0.0"
copy_dir = "0.1.3"

leptos-use = "0.18"
leptos_meta = "0.8"
leptos_router = { version = "0.8"}
log = "0.4.20"
leptos_theme = { path="../.."}
